[package]
name = "image_comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
clap = "3.1.8"
anyhow = "1.0.56"
rayon = "1.5.1"

[profile.release]
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1

